Fix last child alignment regardless of block type

--- a/assets/js/base/components/product-list/style.scss
+++ b/assets/js/base/components/product-list/style.scss
@@ -61,7 +61,7 @@
 			display: flex;
 			flex-direction: column;
 		}
-		.wc-block-grid__product > div:last-child {
+		.wc-block-grid__product > :last-child {
 			margin-top: auto;
 			margin-bottom: 0;
 			padding-bottom: $gap-small;
